# cricket-pong

./: .gitignore  Cargo.toml  Makefile.toml
app/lib/: Cargo.toml
app/lib/e2e/: client.rs
app/lib/src/: home.rs  lib.rs  local.rs
app/lib/src/networking/: components.rs  connection.rs  events.rs  init.rs  mod.rs  resources.rs  rollback.rs  tick.rs
app/lib/src/old_networking/: connection.rs  events.rs  mod.rs  resources.rs  rollback.rs  tick.rs
app/native/: Cargo.toml
app/native/src/: main.rs
app/wasm/: Cargo.toml
app/wasm/src/: lib.rs
base/: Cargo.toml
base/src/: actions.rs  lib.rs  messages.rs  overs.rs  player.rs
base/src/components/: ball.rs  batter.rs  boundary.rs  fielder.rs  mod.rs  phase.rs  physics.rs  player.rs  scoreboard.rs  wicket.rs
base/src/components/instance/: instance.rs  lobby.rs  mod.rs  player.rs
base/src/objects/: ball.rs  batter.rs  fielder.rs  mod.rs
base/src/protocol/: channels.rs  messages.rs  mod.rs  protocol.rs
bots/: Cargo.toml  README.md
bots/src/: batter.rs  lib.rs
controls/: Cargo.toml
controls/src/: actions.rs  bundles.rs  lib.rs  systems.rs
game/: Cargo.toml
game/e2e/: game.rs
game/src/: actions.rs  gameplay.rs  lib.rs  scoring.rs  ui.rs
game/src/objects/: ball.rs  batter.rs  boundary.rs  field.rs  fielder.rs  mod.rs  wicket.rs
game/src/schedule/: mod.rs  physics.rs
game/src/systems/: mod.rs  scene.rs  scoring.rs  sync.rs  tick.rs
graphics/: Cargo.toml
graphics/src/: lib.rs  objects.rs  ui.rs
lobby/protocol/: Cargo.toml
lobby/protocol/src/: bundles.rs  lib.rs  messages.rs  systems.rs
lobby/protocol/src/components/: game.rs  instance.rs  lobby.rs  mod.rs  player.rs
lobby/server/: Cargo.toml
lobby/server/src/: lib.rs  resources.rs  systems.rs
network/: Cargo.toml
network/src/: lib.rs  messages.rs
server/: Cargo.toml
server/e2e/: server.rs
server/src/: connection.rs  init.rs  lib.rs  main.rs  matchmaking.rs  tick.rs  users.rs
