[package]
name = "cricket_pong_base"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
common_lobby_protocol = { path = "../lobby/protocol" }
bevy_ecs = { version = "0.11" }
bevy_core = { version = "0.11" }
bevy_math = { version = "0.11" }
bevy_transform = { version = "0.11" }
bevy_rapier2d = { version = "0.22" }
naia-bevy-shared = { git = "https://github.com/anellie/naia", branch = "bevy-0.11"  }
