[package]
name = "cricket_pong_base"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy_ecs = { version = "0.11" }
bevy_core = { version = "0.11" }
bevy_math = { version = "0.11" }
bevy_transform = { version = "0.11" }
bevy_reflect = { version = "0.11" }

bevy_rapier2d = { version = "0.22", features = [
    "enhanced-determinism",
    "dim2",
    "async-collider",
], default-features = false }

[features]
debug = ["bevy_rapier2d/debug-render-2d"]
headless = ["bevy_rapier2d/headless"]
parallel = ["bevy_rapier2d/parallel"]
wasm = ["bevy_rapier2d/wasm-bindgen"]
