[package]
name = "cricket_pong_controls"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cricket_pong_game = { path = "../game" }
bevy = "0.11"
leafwing-input-manager = "0.10"

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git" }
