[package]
name = "cricket_pong_game"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cricket_pong_base = { path = "../base" }
bevy_app = { version = "0.11" }
bevy_ecs = { version = "0.11" }
bevy_log = { version = "0.11" }
bevy_math = { version = "0.11" }
bevy_render = { version = "0.11" }
bevy_text = { version = "0.11" }
bevy_time = { version = "0.11" }
bevy_transform = { version = "0.11" }
bevy_ui = { version = "0.11" }
bevy_utils = { version = "0.11" }
bevy_rapier2d = { version = "0.22" }
naia-bevy-shared = { git = "https://github.com/anellie/naia", branch = "bevy-0.11"  }

[dev-dependencies]
cricket_pong_controls = { path = "../controls" }
cricket_pong_graphics = { path = "../graphics" }
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git", rev = "b42bb4b" }

[dev-dependencies.bevy_rapier2d]
features = [ "debug-render-2d" ]
version = "0.22"

[[test]]
name = "e2e-game"
path = "e2e/game.rs"
harness = false
