[package]
name = "network_base"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
workspace = ".."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cricket_pong_base = { path = "../base" }
bevy_app = { version = "0.11" }
bevy_core = { version = "0.11" }
bevy_ecs = { version = "0.11" }
bevy_log = { version = "0.11" }
bevy_reflect = { version = "0.11" }
bevy_utils = { version = "0.11" }
bevy_replicon = { version = "0.9" }
serde = "1.0"
