[package]
name = "cricket_pong_server"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
workspace = ".."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cricket_pong_game = { path = "../game", features = ["headless"] }
bevy_app = { version = "0.11" }
bevy_core = { version = "0.11" }
bevy_ecs = { version = "0.11" }
bevy_log = { version = "0.11" }
bevy_time = { version = "0.11" }
bevy_utils = { version = "0.11" }
itertools = { version = "0.11" }

[dev-dependencies]
cricket_pong_graphics = { path = "../graphics" }
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git", rev = "b42bb4b" }

[dev-dependencies.cricket_pong_game]
# run headless
features = ["debug"]
path = "../game"

[[test]]
name = "e2e-server"
path = "e2e/server.rs"
harness = false
