[package]
name = "cricket_pong_app_lib"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cricket_pong_controls = { path = "../../controls" }
cricket_pong_game = { path = "../../game" }
cricket_pong_graphics = { path = "../../graphics" }
bevy = "0.11"
bevy_egui = { version = "0.21" }
naia-bevy-client = { git = "https://github.com/anellie/naia", branch = "bevy-0.11", features = [
    "transport_webrtc",
] }

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git", rev = "b42bb4b" }

[features]
trace = ["bevy/trace_chrome"]
parallel = ["cricket_pong_game/parallel"]
wasm = ["cricket_pong_game/wasm"]

[[test]]
name = "e2e-client"
path = "e2e/client.rs"
harness = false
