[package]
name = "cricket_pong_app_lib"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cricket_pong_controls = { path = "../../controls" }
cricket_pong_game = { path = "../../game" }
cricket_pong_graphics = { path = "../../graphics" }
network_base = { path = "../../network" }
anyhow = "*"
bevy = "0.11"
bevy_egui = { version = "0.21" }
bevy_replicon = { version = "0.9" }

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto.git", rev = "675bf6c" }

[features]
trace = ["bevy/trace_chrome"]
parallel = ["cricket_pong_game/parallel"]
wasm = ["cricket_pong_game/wasm"]

[[test]]
name = "e2e-client"
path = "e2e/client.rs"
harness = false
