[package]
name = "cricket_pong_app_native"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cricket_pong_app_lib = { path = "../lib" }
cfg-if = { version = "1.0" }

[features]
trace = [ "cricket_pong_app_lib/trace" ]
