[package]
name = "common_lobby_protocol"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy_ecs = { version = "0.11" }
bevy_hierarchy = { version = "0.11" }
bevy_log = { version = "0.11" }
naia-bevy-shared = { git = "https://github.com/anellie/naia", branch = "bevy-0.11"  }
